--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-algo_euristici.notes.aux
-algo_euristici.notes.fdb_latexmk
-algo_euristici.notes.fls
-algo_euristici.notes.log
-algo_euristici.notes.out
-algo_euristici.notes.toc
+algo_euristici.notes_aux
+algo_euristici.notes_fdb_latexmk
+algo_euristici.notes_fls
+algo_euristici.notes_log
+algo_euristici.notes_out
+algo_euristici.notes_toc
 
