--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-algo_euristici.notes_aux
-algo_euristici.notes_fdb_latexmk
-algo_euristici.notes_fls
-algo_euristici.notes_log
-algo_euristici.notes_out
-algo_euristici.notes_toc
+algo_euristici_notes.aux
+algo_euristici_notes.fdb_latexmk
+algo_euristici_notes.fdb_latexmk
+algo_euristici_notes.fls
+algo_euristici_notes.log
+algo_euristici_notes.out
+algo_euristici_notes.toc
 
