some major error fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,20 @@
 {
     "cSpell.words": [
+        "beamer",
+        "CMSTP",
+        "Erdos",
+        "Hamiltoniani",
         "Hamiltoniano",
+        "kernelization",
         "kernelizzazione",
+        "l'ottimalità",
+        "labelformat",
         "massimizzabile",
+        "MCSTP",
         "minimizzabile",
         "MISP",
         "Overfitting",
-        "PMSP"
+        "PMSP",
+        "Renyi"
     ]
 }
