--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "Erdos",
         "Hamiltoniani",
         "Hamiltoniano",
+        "Inapprossimabilità",
+        "inaprossimabile",
         "kernelization",
         "kernelizzazione",
         "l'ottimalità",
