--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "beamer",
+        "boxplot",
         "CMSTP",
         "Erdos",
         "Hamiltoniani",
@@ -13,6 +14,7 @@
         "labelformat",
         "massimizzabile",
         "MCSTP",
+        "metaeuristici",
         "minimizzabile",
         "MISP",
         "Overfitting",
