--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,11 @@
         "MISP",
         "Overfitting",
         "PMSP",
+        "QRTD",
         "Renyi",
-        "Vizing"
+        "SQST",
+        "Vizing",
+        "Wilcoxon",
+        "Wilcoxon's"
     ]
 }
