Terminata la lezione 7 | Greedoidi&Matroidi

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "boxplot",
         "CMSTP",
         "Erdos",
+        "greedoide",
+        "Greedoidi",
         "Hamiltoniani",
         "Hamiltoniano",
         "Inapprossimabilità",
@@ -13,6 +15,9 @@
         "l'ottimalità",
         "labelformat",
         "massimizzabile",
+        "matroid",
+        "matroide",
+        "Matroidi",
         "MCSTP",
         "metaeuristici",
         "minimizzabile",
