--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "matroide",
         "Matroidi",
         "MCSTP",
+        "metaeuristica",
         "metaeuristici",
         "minimizzabile",
         "MISP",
@@ -26,6 +27,7 @@
         "PMSP",
         "QRTD",
         "Renyi",
+        "sovradattamento",
         "SQST",
         "Vizing",
         "Wilcoxon",
