Slide 15- appunti iniziati

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "metaeuristici",
         "minimizzabile",
         "MISP",
+        "Neighbourhood",
         "Overfitting",
         "PMSP",
         "QRTD",
