--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "matroide",
         "Matroidi",
         "MCSTP",
+        "memetici",
         "metaeuristica",
         "metaeuristici",
         "minimizzabile",
